--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,18 +78,14 @@ dependencies {
 
     // Features
     api project(":features:tailormade_auth")
+
     implementation project(":features:tailormade_search")
     implementation project(":features:tailormade_profile")
     implementation project(":features:tailormade_chat")
+    implementation project(":features:tailormade_design_detail")
 
     // Location
     implementation gms.location
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Tests
     testImplementation test.junit
